<resources>
    <string name="app_name">Stay Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="facebook_app_id">521937629374295</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>

    <string name="first_name">First Name</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="conform_password">Conform Password</string>
    <string name="last_name">Last Name</string>
    <string name="log_in">Log In</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="or_sign_in_with">Or Sign In With</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="todo">TODO</string>
    <string name="i_agree_with">I Agree With</string>
    <string name="privacy">Privacy</string>
    <string name="and">and</string>
    <string name="policy">Policy</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="show">Show</string>
    <string name="i_agree_with_privacy_and_policy">I Agree With Privacy and Policy</string>
    <string name="camara">Camara</string>
    <string name="gallery">Gallery</string>
    <string name="imageview">ImageView</string>
    <string name="images">Images</string>
    <string name="sign_with_google">Sign With Google</string>
    <string name="search_shops">Search Shops?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="payment_for_a_free_">Payment for a FREE service? Why? No need to worry you will not be charged as long as you return the battery within %s %s.</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="order">Order</string>
    <string name="account">Account</string>
    <string name="notification">Notification</string>
    <string name="wish_list">Wish List</string>
    <string name="setting">Setting</string>
    <string name="general_setting">General Setting</string>
    <string name="register_as_delivery_boy">Register as Delivery Boy</string>
    <string name="about">About</string>
    <string name="feedback">FeedBack</string>
    <string name="log_out">Log Out</string>
    <string name="jitendra_singh_lodhi">Jitendra Singh Lodhi</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout">LogOut</string>
    <string name="change_password">Change Password</string>
    <string name="term_and_condition">Term And Condition</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="profile">Profile</string>
    <string name="demo_text">"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
        totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem
        sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora
        incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit
        laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae
        consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
    "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
        totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem
        sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora
        incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit
        laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae
        consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
    "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
        totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem
        sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora
        incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit
        laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae
        consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</string>
    <string name="old_password">Old Password</string>
    <string name="category">Category</string>
    <string name="name">Name -</string>
    <string name="email_id_">Email Id -</string>
    <string name="user_name">User Name -</string>
    <string name="please_enter_category_of_feedback">Please enter category of feedback</string>
    <string name="please_elaborate_on_your_answer">Please elaborate on your answer</string>
    <string name="write">write....</string>
    <string name="send">Send</string>
    <string name="price">Price</string>
    <string name="_1">1</string>
    <string name="total">Total</string>
    <string name="grand_total">Grand Total</string>
    <string name="buy_now">Buy Now</string>
    <string name="new_password">New Password</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="category_s">Category\'s</string>
    <string name="recommended">Recommended</string>
    <string name="skip">skip</string>
    <string name="get_started">Get Started</string>
    <string name="shop_name">Shop Name</string>
    <string name="shop_address">Shop Address</string>
    <string name="shop_timing">Shop Timing</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="namem">Name</string>
    <string name="mobile_no">Mobile No. -</string>
    <string name="date_of_birth">Date of Birth -</string>
    <string name="_00_00_2000">00/00/2000</string>
    <string name="username">UserName -</string>
    <string name="edit">Edit</string>
    <string name="jitendrasinghthakur888_gmail_com">jitendrasinghthakur888@gmail.com</string>
    <string name="item_name">Item Name</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="end"> %s /-</string>
    <string-array name="category">
        <item>Question</item>
        <item>Suggestion</item>
        <item>Content</item>
        <item>Compliment</item>
        <item>Products</item>
        <item>Complaint</item>
        <item>Other</item>
    </string-array>
</resources>