<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.bottomNavFragments.SettingFragment"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.136">

        <Button
            android:id="@+id/tv_profile"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_person"
            android:fontFamily="serif"
            android:text="@string/profile"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/tv_notification"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/ic_baseline_notifications_24"
            android:fontFamily="serif"
            android:text="@string/notification"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/tv_TermAndCondition"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/ic_shopping_bag"
            android:fontFamily="serif"
            android:text="@string/term_and_condition"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/tv_privacyPolicy"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/ic_baseline_privacy_tip_24"
            android:fontFamily="serif"
            android:text="@string/privacy_policy"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/tv_passwordChange"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/ic_baseline_password_24"
            android:fontFamily="serif"
            android:text="@string/change_password"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"></LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp" />

        <Button
            android:id="@+id/tv_about"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_roundabout"
            android:fontFamily="serif"
            android:text="@string/about"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/tv_feedback"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/ic_feedback"
            android:fontFamily="serif"
            android:text="@string/feedback"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/tv_logOut"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/ic_logout"
            android:fontFamily="serif"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>