<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".home.navFragments.ProfileFragment">

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/profileImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:placeholderImage="@drawable/deliveryman"
        app:roundedCornerRadius="50dp" />


    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_Edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/nameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/side_nav_bar"
            android:padding="8dp">
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="serif"
            android:layout_gravity="center_vertical"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/enterName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:enabled="false"
            android:fontFamily="serif"
            android:background="@android:color/transparent"
            android:layout_gravity="end"
            android:text="@string/namem"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/side_nav_bar"
            android:padding="8dp">
            <TextView
                android:id="@+id/tv_Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="serif"
                android:layout_gravity="center_vertical"
                android:text="@string/email_id_"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/enterEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:enabled="false"
                android:fontFamily="serif"
                android:background="@android:color/transparent"
                android:layout_gravity="end"
                android:singleLine="true"
                android:text="@string/email_id"
                android:textColor="@color/black"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mobileLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/side_nav_bar"
            android:padding="8dp">
            <TextView
                android:id="@+id/tv_mobileNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="serif"
                android:layout_gravity="center_vertical"
                android:text="@string/mobile_no"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/enterMobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="serif"
                android:layout_gravity="end"
                android:enabled="false"
                android:singleLine="true"
                android:background="@android:color/transparent"
                android:text="@string/mobile_no"
                android:textColor="@color/black"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dateOfBirthLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/side_nav_bar"
            android:padding="8dp">
            <TextView
                android:id="@+id/tv_DateOfBirth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="serif"
                android:layout_gravity="center_vertical"
                android:text="@string/date_of_birth"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/enterDateOfBirth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="serif"
                android:background="@android:color/transparent"
                android:layout_gravity="end"
                android:singleLine="true"
                android:text="@string/_00_00_2000"
                android:enabled="false"
                android:textColor="@color/black"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/userNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/side_nav_bar"
            android:padding="8dp">
            <TextView
                android:id="@+id/tv_UserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="serif"
                android:layout_gravity="center_vertical"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/enterUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="serif"
                android:layout_gravity="end"
                android:text="@string/user_name"
                android:singleLine="true"
                android:enabled="false"
                android:background="@android:color/transparent"
                android:textColor="@color/black"
                android:textSize="16sp"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_Edit"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/edit"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_Save"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>